Fix spacing of columns

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   -webkit-box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
   margin: 5px;
-  word-wrap: break-word;
+ word-wrap: break-word;
   padding: 20px;
   background: #fff;
   border-radius: 4px;
@@ -27,5 +27,5 @@
 
 
 .width {
-  min-width: 250px;
+width: 300px;
 }
